--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,7 @@
 <script>
     async function fetchQuote() {
         try {
+            console.log("build v1.0");
             const response = await fetch('/quote');
             const data = await response.json();
             document.getElementById('quote').innerHTML = `
