--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
 <script>
     async function fetchQuote() {
         try {
-            console.log("1st Image");
+            console.log("1st image");
             const response = await fetch('/quote');
             const data = await response.json();
             document.getElementById('quote').innerHTML = `
