--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background-image: url('https://source.unsplash.com/1600x900/?anime,landscape');
+            background-image: url('https://img.freepik.com/free-photo/nature-beauty-reflected-tranquil-outdoor-scene-generative-ai_188544-12603.jpg?t=st=1718164906~exp=1718168506~hmac=1981765bbdebdc3045636b9f1c64b544b9e16ed61c48807d00d9c7d01b2f6999&w=2000');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -23,7 +23,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            backdrop-filter: blur(3px); /* Reduced blur */
+            /* backdrop-filter: blur(3px); Reduced blur */
         }
 
         .container {
