new background image added

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
-            background-image: url('https://img.freepik.com/free-photo/nature-beauty-reflected-tranquil-outdoor-scene-generative-ai_188544-12603.jpg?t=st=1718164906~exp=1718168506~hmac=1981765bbdebdc3045636b9f1c64b544b9e16ed61c48807d00d9c7d01b2f6999&w=2000');
+            background-image: url('DALL·E 2024-06-16 14.50.12 - Itachi Uchiha, exhausted from his missions, is resting in the jungle on a tree around 5_00 am. The scene is styled in 1980s Japanese anime with dynami.webp');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
